# Spellchecking_Algorithm

./: CMakeLists.txt  README.md  readme.md
res/: my_text.txt
src/: CMakeLists.txt  dictionary.cpp  dictionary.h  hashset.cpp  hashset.h  main.cpp
